k8s/networkpolicy/networkpolicy-b.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-b
spec:
  podSelector:
    matchLabels:
      app: service-b
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: service-a0
        - podSelector:
            matchLabels:
              app: service-a1
#        - namespaceSelector:
#            matchLabels:
#              name: ggr-goplatform
#          podSelector:

#            matchLabels:
#              app: goplatform-pocket
